Adapt to new version of infobox to send analytics and other improvements such as html recreation script

--- a/additional_content/degree_project.MULTILINGUAL.html
+++ b/additional_content/degree_project.MULTILINGUAL.html
@@ -125,7 +125,7 @@
 </p>
 
 
-<iframe width="640" height="480" src="https://www.youtube.com/embed/hvZe5wKMZ3E"
+<iframe width="640" height="480" src="https://www.youtube.com/embed/hvZe5wKMZ3E" banner_id="degree_project"
   webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen">
 </iframe>
 
