--- a/additional_content/openhacknice.es.html
+++ b/additional_content/openhacknice.es.html
@@ -81,7 +81,7 @@ RHIME trabajando en equipo
    Después de unas semanas, la organizadora nos pidió subir un vídeo de nuestra demo, mostrando sus funcionalidades. El vídeo se puede ver más abajo.
 </p>
 
-<iframe src="https://player.vimeo.com/video/221308594" width="640" height="360" frameborder="0"
+<iframe src="https://player.vimeo.com/video/221308594" width="640" height="360" frameborder="0" banner_id="openhacknice"
  webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen"></iframe>
 <p>
   <a href="https://vimeo.com/221308594">Open Hack Water Savers project demo</a> from
