--- a/additional_content/summerschoolmunich.MULTILINGUAL.html
+++ b/additional_content/summerschoolmunich.MULTILINGUAL.html
@@ -85,7 +85,7 @@
 @es    quedo en forma de un video fantástico.
 
 </p>
-<iframe src="https://player.vimeo.com/video/228589757" width="640" height="360" frameborder="0"
+<iframe src="https://player.vimeo.com/video/228589757" width="640" height="360" frameborder="0" banner_id="summerschoolmunich"
   webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen"></iframe>
 <p>
 @en    The last two days we were working on the pitch because, event though most of the work was done the work, it had to be
