--- a/additional_content/summerschoolmunich.es.html
+++ b/additional_content/summerschoolmunich.es.html
@@ -61,7 +61,7 @@
    quedo en forma de un video fantástico.
 
 </p>
-<iframe src="https://player.vimeo.com/video/228589757" width="640" height="360" frameborder="0"
+<iframe src="https://player.vimeo.com/video/228589757" width="640" height="360" frameborder="0" banner_id="summerschoolmunich"
   webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen"></iframe>
 <p>
    Los últimos dos días estuvimos trabajando en la defensa porque, aunque casi todo el trabajo estaba hecho, había que
