--- a/additional_content/tadhackmadrid.MULTILINGUAL.html
+++ b/additional_content/tadhackmadrid.MULTILINGUAL.html
@@ -40,7 +40,7 @@
 @es    virtual en un servidor de Santiago.
 </p>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/jCi1_FQhhqQ?rel=0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/jCi1_FQhhqQ?rel=0" banner_id="tadhackmadrid"
  webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen"></iframe>
 
 <p>
