--- a/index.MULTILINGUAL.html
+++ b/index.MULTILINGUAL.html
@@ -444,8 +444,8 @@
 @es                Enviar Mensaje
                 </span>
                 <span class="msg_btn_text waiting_text">
-@en                Please, wait a moment. Connecting...
-@es                Por favor, espere un momento. Conectando...
+@en                Please, wait a moment. Connecting... (cookies are required)
+@es                Por favor, espere un momento. Conectando... (las cookies son necesarias)
                 </span>
                 <span class="msg_btn_text error_text">
 @en                Not available. Please try again later!
