--- a/index.es.html
+++ b/index.es.html
@@ -395,7 +395,7 @@ Acepto
                Enviar Mensaje
                 </span>
                 <span class="msg_btn_text waiting_text">
-               Por favor, espere un momento. Conectando...
+               Por favor, espere un momento. Conectando... (las cookies son necesarias)
                 </span>
                 <span class="msg_btn_text error_text">
                No disponible. Por favor, ¡inténtalo de nuevo más tarde!
