--- a/additional_content/degree_project.es.html
+++ b/additional_content/degree_project.es.html
@@ -91,7 +91,7 @@ Conexiones del microcontrolador
 </p>
 
 
-<iframe width="640" height="480" src="https://www.youtube.com/embed/hvZe5wKMZ3E"
+<iframe width="640" height="480" src="https://www.youtube.com/embed/hvZe5wKMZ3E" banner_id="degree_project"
   webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen">
 </iframe>
 
