--- a/additional_content/openhacknice.html
+++ b/additional_content/openhacknice.html
@@ -81,7 +81,7 @@ RHIME doing team work
    After a couple of weeks, the organizer asked to upload a video of our demo, showing its features. The video is attached below.
 </p>
 
-<iframe src="https://player.vimeo.com/video/221308594" width="640" height="360" frameborder="0"
+<iframe src="https://player.vimeo.com/video/221308594" width="640" height="360" frameborder="0" banner_id="openhacknice"
  webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen"></iframe>
 <p>
   <a href="https://vimeo.com/221308594">Open Hack Water Savers project demo</a> from
