--- a/additional_content/summerschoolmunich.html
+++ b/additional_content/summerschoolmunich.html
@@ -56,7 +56,7 @@
    of my teammates, turned to be very nice.
 
 </p>
-<iframe src="https://player.vimeo.com/video/228589757" width="640" height="360" frameborder="0"
+<iframe src="https://player.vimeo.com/video/228589757" width="640" height="360" frameborder="0" banner_id="summerschoolmunich"
   webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen"></iframe>
 <p>
    The last two days we were working on the pitch because, event though most of the work was done the work, it had to be
