Fix minor bug storing cookie, enhacement in contact text box

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ Accept
                Send Message
                 </span>
                 <span class="msg_btn_text waiting_text">
-               Please, wait a moment. Connecting... (cookies are required)
+               Connecting...  (cookies are required)
                 </span>
                 <span class="msg_btn_text error_text">
                Not available. Please try again later!
